# GalileoHack

./: .gitignore  LICENSE  PRIVACY.md  README.md
.github/workflows/: android.yml
GalileoFront/: build.gradle.kts  gradle.properties  settings.gradle.kts
GalileoFront/app/: build.gradle.kts
GalileoFront/app/src/main/: AndroidManifest.xml
GalileoFront/app/src/main/proto/: ephemeris.proto
GalileoFront/app/src/main/res/drawable/: ic_settings_black_24dp.xml
GalileoFront/app/src/main/res/layout/: activity_main.xml  fragment_dashboard.xml  fragment_data_log_page.xml  fragment_general_stats_page.xml  fragment_home.xml  fragment_landing_page.xml  fragment_notifications.xml  fragment_satellite_filters_modal_pane_list_dialog.xml  fragment_satellite_list_page.xml  recycler_view_item_1.xml  satellite_recycler_view_item.xml
GalileoFront/app/src/main/res/menu/: bottom_nav_menu.xml
GalileoFront/app/src/main/res/navigation/: mobile_navigation.xml
GalileoFront/app/src/main/res/values/: colors.xml  (+4 more)
GalileoFront/app/src/main/res/values-ca-rES/: strings.xml
GalileoFront/app/src/main/res/values-es-rES/: strings.xml
GalileoFront/app/src/main/res/values-night/: colors.xml  themes.xml
GalileoFront/gradle/: libs.versions.toml
GalileoFront/gradle/wrapper/: gradle-wrapper.properties
esa/: Ephemeris.java  PVTCalc.java
galileo_back/: .gitignore  Cargo.toml
galileo_back/src/: main.rs
misc/esa/: GalileoEphemeris.java  calculatePVT.java
misc/experimental/circle_intersection/: circle_intersection.pde
misc/experimental/sphere_intersection/: sphere_intersection.pde
(+1007 files in other folders)
