[package]
name = "galileo_back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
influxdb = { version = "0.7.2", features = ["derive"] }
chrono = "0.4.38"
tokio = { version = "1.37.0", features = ["full"] }
rand = "0.8.5"
